Variable en français et plus compréhensibles

--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "limit_date = datetime.now().replace(month=datetime.now().month - 2)\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
-    "events_par_semaine = events_par_semaine.resample('W')[['url']].count().rename(columns={'url': 'nb'})\n",
+    "events_par_semaine = events_par_semaine.resample('W')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
     "\n",
     "fig = px.bar(events_par_semaine)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events_mensuels_par_an = events.resample('MS')[['url']].count().rename(columns={'url': 'nb'})\n",
+    "events_mensuels_par_an = events.resample('MS')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
     "\n",
     "fig = px.bar(events_mensuels_par_an)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events_par_an = events.resample('YS')[['url']].count().rename(columns={'url': 'nb'})\n",
+    "events_par_an = events.resample('YS')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
     "\n",
     "fig = px.bar(events_par_an)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
