--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
+    "zelty.rename(columns={'category': 'Type de produit', 'price': 'Prix'}, inplace=True)\n",
     "if dt.is_notebook():\n",
     "    print(zelty.head())"
    ]
@@ -29,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire = zelty.groupby(['date', 'category'])[['price']].sum().unstack('category')"
+    "chiffredaffaire = zelty.groupby(['date', 'Type de produit'])[['Prix']].sum().unstack('Type de produit')"
    ]
   },
   {
@@ -40,15 +41,16 @@
    "outputs": [],
    "source": [
     "chiffredaffaire_par_an = chiffredaffaire.resample('YS').sum().fillna(0)\n",
-    "chiffredaffaire_par_an['year'] = chiffredaffaire_par_an.index.year\n",
+    "chiffredaffaire_par_an['Année'] = chiffredaffaire_par_an.index.year\n",
     "chiffredaffaire_par_an.reset_index(inplace=True)\n",
-    "chiffredaffaire_par_an.set_index('year', inplace=True)\n",
+    "chiffredaffaire_par_an.set_index('Année', inplace=True)\n",
     "# = chiffredaffaire.columns.droplevel(0)\n",
     "chiffredaffaire_par_an.columns = chiffredaffaire_par_an.columns.droplevel(0)\n",
     "del chiffredaffaire_par_an['']\n",
     "\n",
     "fig = px.bar(chiffredaffaire_par_an)\n",
-    "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None,separators=\", \")\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_01_ca_par_categories_et_an')"
    ]
   },
@@ -70,15 +72,16 @@
    "outputs": [],
    "source": [
     "chiffredaffaire_12_mois = zelty[zelty.date > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
-    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['price']].sum().reset_index()\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['Prix']].sum().reset_index()\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
-    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index().set_index(['date', 'produit'])[['price']]\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index().set_index(['date', 'produit'])[['Prix']]\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.unstack('produit')\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.resample('MS').sum()\n",
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(chiffredaffaire_12_mois.dropna())\n",
-    "fig.update_layout(legend_title=\"Produit\",xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(legend_title=\"Produit\",xaxis_title=None,yaxis_title=None,separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_02_ca_par_produits_12_mois')"
    ]
   },
@@ -89,10 +92,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_total_by_year = chiffredaffaire.stack('category').reset_index().groupby('date')[['price']].sum().resample('Y').sum()\n",
+    "chiffredaffaire_total_by_year = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum().resample('Y').sum()\n",
     "chiffredaffaire_total_by_year.index = chiffredaffaire_total_by_year.index.year\n",
     "\n",
-    "chiffredaffaire_a_date = chiffredaffaire.stack('category').reset_index().groupby('date')[['price']].sum()\n",
+    "chiffredaffaire_a_date = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum()\n",
     "chiffredaffaire_a_date['a_date'] = chiffredaffaire_a_date.index.month*100+chiffredaffaire_a_date.index.day\n",
     "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < datetime.now().month*100+datetime.now().day]\n",
     "del chiffredaffaire_a_date['a_date']\n",
@@ -100,18 +103,20 @@
     "chiffredaffaire_a_date.index = chiffredaffaire_a_date.index.year\n",
     "chiffredaffaire_a_date\n",
     "libelle_a_date = \"à date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
-    "chiffredaffaire_total_by_year[libelle_a_date] = chiffredaffaire_a_date['price']\n",
+    "chiffredaffaire_total_by_year[libelle_a_date] = chiffredaffaire_a_date['Prix']\n",
     "chiffredaffaire_total_by_year.fillna(0, inplace=True)\n",
-    "chiffredaffaire_total_by_year['toute l\\'année'] = chiffredaffaire_total_by_year['price']\n",
-    "del chiffredaffaire_total_by_year['price']\n",
-    "del chiffredaffaire_total_by_year['toute l\\'année'][max(chiffredaffaire_total_by_year.index)]\n",
+    "chiffredaffaire_total_by_year['Toute l\\'année'] = chiffredaffaire_total_by_year['Prix']\n",
+    "del chiffredaffaire_total_by_year['Prix']\n",
+    "del chiffredaffaire_total_by_year['Toute l\\'année'][max(chiffredaffaire_total_by_year.index)]\n",
     "\n",
     "\n",
     "import plotly.graph_objects as go\n",
     "fig = go.Figure(data=[\n",
     "    go.Bar(name=libelle_a_date, x=chiffredaffaire_total_by_year.index, y=chiffredaffaire_total_by_year[libelle_a_date]),\n",
-    "    go.Bar(name='Toute l\\'année', x=chiffredaffaire_total_by_year.index, y=chiffredaffaire_total_by_year['toute l\\'année'])\n",
+    "    go.Bar(name='Toute l\\'année', x=chiffredaffaire_total_by_year.index, y=chiffredaffaire_total_by_year['Toute l\\'année'])\n",
     "])\n",
+    "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_03_ca_total_par_an')"
    ]
   },
@@ -126,7 +131,7 @@
     "chiffredaffaire_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "chiffredaffaire_year.columns = chiffredaffaire_year.columns.droplevel(0)\n",
     "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
-    "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('category'), columns=['total']).groupby('date').sum()\n",
+    "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('Type de produit'), columns=['total']).groupby('date').sum()\n",
     "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
     "\n",
     "if dt.is_notebook():\n",
@@ -141,6 +146,8 @@
    "outputs": [],
    "source": [
     "fig = px.bar(chiffredaffaire_year['total'])\n",
+    "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois')"
    ]
   },
@@ -154,9 +161,10 @@
     "#del chiffredaffaire_top_year['total']\n",
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
     "\n",
-    "fig = px.bar(chiffredaffaire_top_year[['total']].head(50))\n",
+    "fig = px.bar(chiffredaffaire_top_year['total'].head(50))\n",
     "#fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
-    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
    ]
   },
@@ -200,22 +208,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benefices = chiffredaffaire.stack('category')[['price']].groupby('date').sum().resample('MS').sum()\n",
-    "benefices['year'] = benefices.index.year\n",
-    "benefices['marge'] = benefices['year'].map(marges)\n",
-    "benefices['charges_fixes'] = benefices['year'].map(charges)/12\n",
-    "benefices = benefices.groupby(['date','year']).sum()\n",
+    "benefices = chiffredaffaire.stack('Type de produit')[['Prix']].groupby('date').sum().resample('MS').sum()\n",
+    "benefices['Année'] = benefices.index.year\n",
+    "benefices['marge'] = benefices['Année'].map(marges)\n",
+    "benefices['charges_fixes'] = benefices['Année'].map(charges)/12\n",
+    "benefices = benefices.groupby(['date','Année']).sum()\n",
     "benefices['taux_ht'] = 0.8333\n",
-    "benefices['total'] = benefices['price'] * benefices['marge'] * benefices['taux_ht'] - benefices['charges_fixes']\n",
-    "del benefices['price']\n",
+    "benefices['total'] = benefices['Prix'] * benefices['marge'] * benefices['taux_ht'] - benefices['charges_fixes']\n",
+    "del benefices['Prix']\n",
     "del benefices['marge']\n",
     "del benefices['charges_fixes']\n",
     "del benefices['taux_ht']\n",
-    "benefices = benefices.unstack('year').fillna(0)\n",
+    "benefices = benefices.unstack('Année').fillna(0)\n",
     "benefices.columns = benefices.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(benefices)\n",
-    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_06_benefice')"
    ]
   },
