--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "limit_date = datetime.now().replace(month=datetime.now().month - 1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
-    "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'nb'})\n",
+    "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "\n",
     "fig = px.bar(adhésions_last_month)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
@@ -57,9 +57,9 @@
    "source": [
     "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
     "adhésions_top_year = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
-    "adhésions_top_year = adhésions_top_year.resample('D').sum().rename(columns={'price': 'nb'})\n",
+    "adhésions_top_year = adhésions_top_year.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "if dt.is_notebook():\n",
-    "    print(adhésions_top_year.sort_values(by='nb', ascending=False).head(20))"
+    "    print(adhésions_top_year.sort_values(by='Nb d\\'adhésion', ascending=False).head(20))"
    ]
   },
   {
@@ -69,9 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adhésions_by_month = adhésions.resample('M').sum().rename(columns={'price': 'nb'})\n",
-    "adhésions_by_month['year'] = adhésions_by_month.index.year\n",
-    "adhésions_by_month = adhésions_by_month.groupby(['date','year']).sum().unstack('year').fillna(0)\n",
+    "adhésions_by_month = adhésions.resample('M').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
+    "adhésions_by_month['Année'] = adhésions_by_month.index.year\n",
+    "adhésions_by_month = adhésions_by_month.groupby(['date','Année']).sum().unstack('Année').fillna(0)\n",
     "adhésions_by_month.columns = adhésions_by_month.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(adhésions_by_month)\n",
@@ -96,21 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adhésions_by_year = adhésions.resample('Y').sum().rename(columns={'price': 'nb'})\n",
+    "adhésions_by_year = adhésions.resample('Y').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_by_year.index = adhésions_by_year.index.year\n",
     "\n",
     "adhésions_a_date = adhésions.copy()\n",
     "adhésions_a_date['a_date'] = adhésions_a_date.index.month*100+adhésions_a_date.index.day\n",
     "adhésions_a_date = adhésions_a_date[adhésions_a_date['a_date'] < datetime.now().month*100+datetime.now().day]\n",
     "del adhésions_a_date['a_date']\n",
-    "adhésions_a_date = adhésions_a_date.resample('Y').sum().rename(columns={'price': 'nb'})\n",
+    "adhésions_a_date = adhésions_a_date.resample('Y').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_a_date.index = adhésions_a_date.index.year\n",
     "libelle_a_date = \"À date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
-    "adhésions_by_year[libelle_a_date] = adhésions_a_date['nb']\n",
+    "adhésions_by_year[libelle_a_date] = adhésions_a_date['Nb d\\'adhésion']\n",
     "#adhésions_by_year.histogram()\n",
     "adhésions_by_year.fillna(0, inplace=True)\n",
-    "adhésions_by_year['toute l\\'année'] = adhésions_by_year['nb']# - adhésions_by_year[libelle_a_date]\n",
-    "del adhésions_by_year['nb']\n",
+    "adhésions_by_year['toute l\\'année'] = adhésions_by_year['Nb d\\'adhésion']# - adhésions_by_year[libelle_a_date]\n",
+    "del adhésions_by_year['Nb d\\'adhésion']\n",
     "del adhésions_by_year['toute l\\'année'][max(adhésions_by_year.index)]\n",
     "\n",
     "import plotly.graph_objects as go\n",
@@ -119,6 +119,9 @@
     "    go.Bar(name='Toute l\\'année', x=adhésions_by_year.index, y=adhésions_by_year['toute l\\'année'])\n",
     "])\n",
     "# Change the bar mode\n",
+    "fig.update_layout(separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\")\n",
+    "\n",
     "dt.fig_save_or_show(fig, 'adhesions_03_adhesion_par_an')"
    ]
   },
@@ -147,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
