--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -17,8 +17,8 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "services_baristas = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
-    "services_baristas['mois'] = pd.to_datetime(services_baristas['date'].apply(lambda x: x[0:7]+'-01'))\n",
-    "services_baristas['date'] = pd.to_datetime(services_baristas['date'])\n",
+    "services_baristas['Mois'] = pd.to_datetime(services_baristas['date'].apply(lambda x: x[0:7]+'-01'))\n",
+    "services_baristas['Date'] = pd.to_datetime(services_baristas['date'])\n",
     "if dt.is_notebook():\n",
     "    print(services_baristas.head())"
    ]
@@ -30,9 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "creneaux_annules = services_baristas[services_baristas['role'] == \"CRENEAU ANNULE\"][['mois', 'role']].groupby('mois').count()\n",
-    "creneaux_annules['year'] = creneaux_annules.index.year\n",
-    "creneaux_annules = creneaux_annules.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)\n",
+    "creneaux_annules = services_baristas[services_baristas['role'] == \"CRENEAU ANNULE\"][['Mois', 'role']].groupby('Mois').count()\n",
+    "creneaux_annules['Année'] = creneaux_annules.index.year\n",
+    "creneaux_annules = creneaux_annules.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)\n",
     "creneaux_annules.columns = creneaux_annules.columns.droplevel(0)\n",
     "\n",
     "fig = px.bar(creneaux_annules)\n",
@@ -47,12 +47,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
-    "nb_baristas = nb_baristas.groupby('mois').aggregate(func=['count', 'sum'])\n",
+    "nb_baristas = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['Mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
+    "nb_baristas = nb_baristas.groupby('Mois').aggregate(func=['count', 'sum'])\n",
     "nb_baristas.columns = nb_baristas.columns.droplevel(0)\n",
-    "nb_baristas = nb_baristas.rename(columns={'count': 'nb baristas', 'sum': 'nb services réalisés'})\n",
-    "nb_baristas['year'] = nb_baristas.index.year\n",
-    "nb_baristas = nb_baristas.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)"
+    "nb_baristas = nb_baristas.rename(columns={'count': 'Nb de baristas', 'sum': 'Nb de services réalisés'})\n",
+    "nb_baristas['Année'] = nb_baristas.index.year\n",
+    "nb_baristas = nb_baristas.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas[['nb baristas']].stack('year').groupby('year').sum())\n",
+    "fig = px.bar(nb_baristas[['Nb de baristas']].stack('Année').groupby('Année').sum())\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_02_nb_baristas_par_an')"
    ]
@@ -74,8 +74,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas[['nb services réalisés']].stack('year').groupby('year').sum())\n",
+    "fig = px.bar(nb_baristas[['Nb de services réalisés']].stack('Année').groupby('Année').sum())\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_layout(separators=', ')\n",
+    "fig.update_yaxes(tickformat=\",d\")\n",
     "dt.fig_save_or_show(fig, 'baristas_03_nb_services_realises_par_an')"
    ]
   },
@@ -86,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas['nb baristas'])\n",
+    "fig = px.bar(nb_baristas['Nb de baristas'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_04_nb_baristas_par_mois')"
    ]
@@ -98,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas['nb services réalisés'])\n",
+    "fig = px.bar(nb_baristas['Nb de services réalisés'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_05_nb_services_réalisés_par_mois')"
    ]
@@ -110,12 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "services = services_baristas[services_baristas['role'] == \"REFERENT\"].groupby(['mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
-    "services = services.groupby('mois').aggregate(func=['count', 'sum'])\n",
+    "services = services_baristas[services_baristas['role'] == \"REFERENT\"].groupby(['Mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
+    "services = services.groupby('Mois').aggregate(func=['count', 'sum'])\n",
     "services.columns = services.columns.droplevel(0)\n",
-    "services['year'] = services.index.year\n",
+    "services['Année'] = services.index.year\n",
     "\n",
-    "services = services.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)"
+    "services = services.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)"
    ]
   },
   {
@@ -137,9 +139,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_services = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"][['mois', 'date', 'role']].groupby(['mois', 'date']).count().rename(columns={'role': 'nb'}).reset_index()[['mois', 'date']].groupby('mois').count()\n",
-    "nb_services['year'] = nb_services.index.year\n",
-    "nb_services = nb_services.reset_index().set_index(['mois', 'year']).unstack('year').fillna(0)\n",
+    "nb_services = services_baristas[services_baristas['role'] != \"CRENEAU ANNULE\"][['Mois', 'date', 'role']].groupby(['Mois', 'date']).count().rename(columns={'role': 'nb'}).reset_index()[['Mois', 'date']].groupby('Mois').count()\n",
+    "nb_services['Année'] = nb_services.index.year\n",
+    "nb_services = nb_services.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)\n",
     "nb_services.columns = nb_services.columns.droplevel(0)\n",
     "nb_services\n",
     "\n",
@@ -157,12 +159,13 @@
    "source": [
     "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
     "baristas_t2n = services_baristas.groupby(['telephone'])['nom','role'].first()\n",
-    "baristas = services_baristas[services_baristas['mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['telephone'])[['role']].count()\n",
-    "baristas['nb'] = services_baristas[services_baristas['mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['telephone'])[['role']].count()\n",
+    "baristas = services_baristas[services_baristas['Mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['telephone'])[['role']].count()\n",
+    "baristas['nb'] = services_baristas[services_baristas['Mois'] > limit_date][services_baristas['role'] != \"CRENEAU ANNULE\"].groupby(['telephone'])[['role']].count()\n",
     "baristas.sort_values(by='nb', ascending=False, inplace=True)\n",
     "baristas['nom'] = baristas.index.map(baristas_t2n['nom'])\n",
     "baristas = baristas.reset_index()[['nom', 'nb']].groupby('nom')[['nb']].sum().sort_values(by='nb', ascending=False)\n",
     "\n",
+    "baristas.rename(columns={'nb': 'Nb de services'}, inplace=True)\n",
     "fig = px.bar(baristas)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_xaxes(showticklabels=False)\n",
@@ -188,15 +191,15 @@
    "outputs": [],
    "source": [
     "res={\n",
-    "    'un_seul_service': len(baristas[baristas[['nb']] < 2].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_20_services': len(baristas[baristas[['nb']] > 20].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_40_services': len(baristas[baristas[['nb']] > 40].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_60_services': len(baristas[baristas[['nb']] > 60].dropna().reset_index()['nom'].unique()),\n",
+    "    'un_seul_service': len(baristas[baristas[['Nb de services']] < 2].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_20_services': len(baristas[baristas[['Nb de services']] > 20].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_40_services': len(baristas[baristas[['Nb de services']] > 40].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_60_services': len(baristas[baristas[['Nb de services']] > 60].dropna().reset_index()['nom'].unique()),\n",
     "    'nb_baristas': len(baristas.dropna().reset_index()['nom'].unique()),\n",
-    "    'moyenne_du_nb_de_services': baristas['nb'].mean()\n",
+    "    'moyenne_du_nb_de_services': baristas['Nb de services'].mean()\n",
     "}\n",
     "baristas_std = baristas.reset_index()\n",
-    "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == int(len(baristas_std)/2)].reset_index()['nb'][0]\n",
+    "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == int(len(baristas_std)/2)].reset_index()['Nb de services'][0]\n",
     "if dt.is_notebook():\n",
     "    print(res)"
    ]
