Présentation des évènements

--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -31,12 +31,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(month=datetime.now().month - 2)\n",
+    "limit_date = datetime.now().replace(month=datetime.now().month - 6)\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
     "events_par_semaine = events_par_semaine.resample('W')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
     "\n",
     "fig = px.bar(events_par_semaine)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "fig.update_yaxes(dtick=\"n\")\n",
     "dt.fig_save_or_show(fig, 'evenements_01_events_par_semaine')"
    ]
   },
@@ -62,6 +63,10 @@
    "outputs": [],
    "source": [
     "events_par_an = events.resample('YS')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
+    "events_par_an.reset_index(inplace=True)\n",
+    "events_par_an['Année'] = events_par_an['date'].apply(lambda x: str(x)[0:4])\n",
+    "events_par_an.set_index('Année', inplace=True)\n",
+    "del events_par_an['date']\n",
     "\n",
     "fig = px.bar(events_par_an)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
