Mise en valeur des recettes du mois courant

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -131,11 +131,7 @@
     "chiffredaffaire_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "chiffredaffaire_year.columns = chiffredaffaire_year.columns.droplevel(0)\n",
     "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
-    "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('Type de produit'), columns=['total']).groupby('date').sum()\n",
-    "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
-    "\n",
-    "if dt.is_notebook():\n",
-    "    print(chiffredaffaire_top_year[['total']].head(20))\n"
+    "chiffredaffaire_year['total'] = pd.DataFrame(chiffredaffaire_year.stack('Type de produit'), columns=['total']).groupby('date').sum()"
    ]
   },
   {
@@ -158,11 +154,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#del chiffredaffaire_top_year['total']\n",
-    "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
+    "from datetime import datetime \n",
+    "from dateutil.relativedelta import relativedelta \n",
     "\n",
-    "fig = px.bar(chiffredaffaire_top_year['total'].head(50))\n",
-    "#fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None)\n",
+    "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
+    "chiffredaffaire_top_year = chiffredaffaire_top_year[['total']].head(50)\n",
+    "\n",
+    "chiffredaffaire_top_year['mois_courant'] = chiffredaffaire_top_year.index >= datetime.now() + relativedelta(months=-1)\n",
+    "chiffredaffaire_top_year = chiffredaffaire_top_year.reset_index().set_index(['date', 'mois_courant'])\n",
+    "chiffredaffaire_top_year = chiffredaffaire_top_year.unstack('mois_courant')\n",
+    "chiffredaffaire_top_year.columns = chiffredaffaire_top_year.columns.droplevel(0)\n",
+    "chiffredaffaire_top_year['total'] = chiffredaffaire_top_year[True].fillna(0) + chiffredaffaire_top_year[False].fillna(0)\n",
+    "chiffredaffaire_top_year = chiffredaffaire_top_year.sort_values(by='total', ascending=False)\n",
+    "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
+    "del chiffredaffaire_top_year['total']\n",
+    "\n",
+    "chiffredaffaire_top_year\n",
+    "\n",
+    "fig = px.bar(chiffredaffaire_top_year)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
