--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "if dt.is_notebook():\n",
-    "    print(baristas.head(30))"
+    "    print(baristas_year.head(60))"
    ]
   },
   {
