Réduit le nom des produits pour l'affichage mobile

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -12,6 +12,7 @@
     "from datetime import datetime\n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
+    "import re\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "if dt.is_notebook():\n",
     "    __file__ = \"notebook/\"\n",
@@ -74,6 +75,7 @@
     "chiffredaffaire_12_mois = zelty[zelty.date > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['Prix']].sum().reset_index()\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
+    "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['produit'].apply(lambda x: re.sub(r'  *', ' ', x)[:25])\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index().set_index(['date', 'produit'])[['Prix']]\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.unstack('produit')\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.resample('MS').sum()\n",
