Nombre de services par moment de la semaine

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -59,6 +59,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "340d7679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "limit_date_year = datetime.now() + relativedelta(months=-6)\n",
+    "creneaux_annules_year = services_baristas_annule[services_baristas_annule['Mois'] > limit_date_year]\n",
+    "creneaux_annules_year['Nb services annulés'] = creneaux_annules_year['role'].apply(lambda x : 1 if x == \"CRENEAU ANNULE\" else 0)\n",
+    "creneaux_annules_year['Service Semaine Order'] = creneaux_annules_year['Date'].dt.weekday.map(str)+' '+creneaux_annules_year['Date'].dt.day_name(locale='fr_FR.utf8')+' '+creneaux_annules_year['Date'].dt.time.map(str)\n",
+    "creneaux_annules_year['Service Semaine'] = creneaux_annules_year['Date'].dt.day_name(locale='fr_FR.utf8')+' '+creneaux_annules_year['Date'].dt.time.map(str)\n",
+    "\n",
+    "\n",
+    "creneaux_annules_semaine = creneaux_annules_year.groupby(['Service Semaine Order', 'Service Semaine'])[['Nb services annulés']].sum().rename({'role': 'Service annulé'})\n",
+    "creneaux_annules_semaine = creneaux_annules_semaine.reset_index().set_index('Service Semaine')\n",
+    "creneaux_annules_semaine\n",
+    "fig = px.bar(creneaux_annules_semaine['Nb services annulés'])\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'baristas_11_creneaux_annules_semaine')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "aad38714",
    "metadata": {},
    "outputs": [],
