Dicile du nb de service

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -249,6 +249,8 @@
    "source": [
     "res={\n",
     "    'un_seul_service': len(baristas_year[baristas_year['Nb de services'] < 2].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_5_services': len(baristas_year[baristas_year['Nb de services'] > 5].dropna().reset_index()['nom'].unique()),\n",
+    "    'plus_de_10_services': len(baristas_year[baristas_year['Nb de services'] > 10].dropna().reset_index()['nom'].unique()),\n",
     "    'plus_de_20_services': len(baristas_year[baristas_year['Nb de services'] > 20].dropna().reset_index()['nom'].unique()),\n",
     "    'plus_de_40_services': len(baristas_year[baristas_year['Nb de services'] > 40].dropna().reset_index()['nom'].unique()),\n",
     "    'plus_de_60_services': len(baristas_year[baristas_year['Nb de services'] > 60].dropna().reset_index()['nom'].unique()),\n",
