Dans le graph du nombre de service par personne, ajouter la notion de premier service

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -202,7 +202,6 @@
     "nb_services['Année'] = nb_services.index.year\n",
     "nb_services = nb_services.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)\n",
     "nb_services.columns = nb_services.columns.droplevel(0)\n",
-    "nb_services\n",
     "\n",
     "fig = px.bar(nb_services)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
@@ -218,12 +217,20 @@
    "source": [
     "limit_date_year = datetime.now() + relativedelta(years=-1)\n",
     "services_baristas_year = services_baristas[services_baristas['Mois'] > limit_date_year]\n",
-    "baristas_year = services_baristas_year.groupby(['nom', 'barista_hash'])[['role']].count().rename(columns={'role': 'nb'})\n",
-    "baristas_year.sort_values(by='nb', ascending=False, inplace=True)\n",
+    "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (datetime.now() + relativedelta(years=-1)).isoformat()\n",
+    "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (datetime.now() + relativedelta(years=-1)).isoformat()\n",
+    "baristas_year = services_baristas_year.groupby(['nom', 'barista_hash', 'is_not_premier_service_12_mois'])[['role']].count().rename(columns={'role': 'nb'})\n",
+    "baristas_year.sort_values(by=['nb', 'is_not_premier_service_12_mois', 'nom'], ascending=False, inplace=True)\n",
     "baristas_year.rename(columns={'nb': 'Nb de services'}, inplace=True)\n",
     "baristas_year = baristas_year.reset_index().set_index('nom')\n",
+    "baristas_year['Est là depuis plus d\\'un an'] = baristas_year[baristas_year['is_not_premier_service_12_mois']]['Nb de services']\n",
+    "baristas_year['A fait son premier service dans les 12 mois'] = baristas_year[baristas_year['is_not_premier_service_12_mois'] != True]['Nb de services']\n",
+    "graph_baristas_year = baristas_year.copy()\n",
+    "del graph_baristas_year['is_not_premier_service_12_mois']\n",
+    "del graph_baristas_year['barista_hash']\n",
+    "del graph_baristas_year['Nb de services']\n",
     "\n",
-    "fig = px.bar(baristas_year['Nb de services'])\n",
+    "fig = px.bar(graph_baristas_year)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_xaxes(showticklabels=False)\n",
     "dt.fig_save_or_show(fig, 'baristas_08_nb_services_par_baristas_12_mois')"
@@ -248,13 +255,15 @@
    "outputs": [],
    "source": [
     "res={\n",
-    "    'un_seul_service': len(baristas_year[baristas_year['Nb de services'] < 2].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_5_services': len(baristas_year[baristas_year['Nb de services'] > 5].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_10_services': len(baristas_year[baristas_year['Nb de services'] > 10].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_20_services': len(baristas_year[baristas_year['Nb de services'] > 20].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_40_services': len(baristas_year[baristas_year['Nb de services'] > 40].dropna().reset_index()['nom'].unique()),\n",
-    "    'plus_de_60_services': len(baristas_year[baristas_year['Nb de services'] > 60].dropna().reset_index()['nom'].unique()),\n",
-    "    'nb_baristas': len(baristas_year.dropna().reset_index()['nom'].unique()),\n",
+    "    'un_seul_service_premier_service': len(baristas_year[baristas_year['Nb de services'] < 2][baristas_year['is_not_premier_service_12_mois'] != True]),\n",
+    "    'un_seul_service': len(baristas_year[baristas_year['Nb de services'] < 2]),\n",
+    "    'deux_services': len(baristas_year[baristas_year['Nb de services'] < 3]),\n",
+    "    'plus_de_5_services': len(baristas_year[baristas_year['Nb de services'] > 5]),\n",
+    "    'plus_de_10_services': len(baristas_year[baristas_year['Nb de services'] > 10]),\n",
+    "    'plus_de_20_services': len(baristas_year[baristas_year['Nb de services'] > 20]),\n",
+    "    'plus_de_40_services': len(baristas_year[baristas_year['Nb de services'] > 40]),\n",
+    "    'plus_de_60_services': len(baristas_year[baristas_year['Nb de services'] > 60]),\n",
+    "    'nb_baristas': len(baristas_year),\n",
     "    'moyenne_du_nb_de_services': baristas_year['Nb de services'].mean()\n",
     "}\n",
     "baristas_std = baristas_year.reset_index()\n",
