--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -33,11 +33,15 @@
    "source": [
     "limit_date = datetime.now().replace(month=datetime.now().month - 6)\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
-    "events_par_semaine = events_par_semaine.resample('W')[['url']].count().rename(columns={'url': 'Nb d\\'évènements'})\n",
+    "events_par_semaine = events_par_semaine.resample('W')[['url']].count().rename(columns={'url': 'Nb évènements'})\n",
     "\n",
-    "fig = px.bar(events_par_semaine)\n",
+    "events_par_semaine[\"Nb d'évènements\"] = events_par_semaine[events_par_semaine.index <= datetime.now().isoformat()][\"Nb évènements\"]\n",
+    "events_par_semaine[\"Nb d'évènements futurs\"] = events_par_semaine[events_par_semaine.index > datetime.now().isoformat()][\"Nb évènements\"]\n",
+    "del events_par_semaine[\"Nb évènements\"]\n",
+    "fig = px.bar(events_par_semaine,color_discrete_map={\"Nb d'évènements\": '#636efa', \"Nb d'évènements futurs\": '#9aa1fa'})\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_yaxes(dtick=\"n\")\n",
+    "\n",
     "dt.fig_save_or_show(fig, 'evenements_01_events_par_semaine')"
    ]
   },
