--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -83,6 +83,47 @@
    "id": "29a33115",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
+    "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
+    "events_by_day.set_index('date', inplace=True)\n",
+    "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()\n",
+    "#d2e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3e4cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "zelty['date'] = pd.to_datetime(zelty['date']).apply(lambda x: str(x)[0:10])\n",
+    "zelty_by_day = zelty.groupby('date')[['price']].sum()\n",
+    "zelty_by_day['evenement'] = zelty_by_day.index.map(d2e)\n",
+    "#zelty_by_day.sort_values('price', ascending=False).dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dbf75c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adhésions = zelty[zelty['category'] == 'Adhésion'].groupby('date')[['price']].count().rename(columns={'price': 'adhésions'})\n",
+    "adhésions['evenement'] = adhésions.index.map(d2e)\n",
+    "zelty_by_day['adhésions'] = adhésions['adhésions']\n",
+    "zelty_by_day.dropna().sort_values('adhésions', ascending=False)[['evenement', 'adhésions', 'price']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38a47c95",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
