Ajout des activités dans les graphs quotidiens

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -19,7 +19,15 @@
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "if dt.is_notebook():\n",
-    "    print(zelty.head())"
+    "    print(zelty.head())\n",
+    "\n",
+    "events = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../events/barco_events_all.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "events['date'] = pd.to_datetime(events['date'])\n",
+    "events.set_index('date', inplace=True)\n",
+    "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
+    "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
+    "events_by_day.set_index('date', inplace=True)\n",
+    "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()"
    ]
   },
   {
@@ -42,8 +50,9 @@
     "limit_date = datetime.now().replace(month=datetime.now().month - 1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
+    "adhésions_last_month['évènement'] = adhésions_last_month.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
     "\n",
-    "fig = px.bar(adhésions_last_month)\n",
+    "fig = px.bar(adhésions_last_month, y=['Nb d\\'adhésion'], hover_data=['évènement'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'adhesions_01_adhesion_des_derniers_jours')"
    ]
