--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -19,6 +19,10 @@
     "events = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../events/barco_events_all.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "events['date'] = pd.to_datetime(events['date'])\n",
     "events.set_index('date', inplace=True)\n",
+    "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
+    "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
+    "events_by_day.set_index('date', inplace=True)\n",
+    "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()\n",
     "\n",
     "if dt.is_notebook():\n",
     "    print(events.head())"
@@ -80,20 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a33115",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
-    "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
-    "events_by_day.set_index('date', inplace=True)\n",
-    "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()\n",
-    "#d2e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ee3e4cdd",
    "metadata": {},
    "outputs": [],
@@ -115,13 +105,15 @@
     "adhésions = zelty[zelty['category'] == 'Adhésion'].groupby('date')[['price']].count().rename(columns={'price': 'adhésions'})\n",
     "adhésions['evenement'] = adhésions.index.map(d2e)\n",
     "zelty_by_day['adhésions'] = adhésions['adhésions']\n",
-    "zelty_by_day.dropna().sort_values('adhésions', ascending=False)[['evenement', 'adhésions', 'price']]"
+    "zelty_by_day['jour'] = pd.to_datetime(zelty_by_day.index).strftime('%A') \n",
+    "evenement_adhesion_prix = zelty_by_day.dropna().sort_index(ascending=False)[['jour','evenement', 'adhésions', 'price']]\n",
+    "dt.true_or_html_to_file(evenement_adhesion_prix, 'evenements_04_adhesion_prix') and evenement_adhesion_prix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38a47c95",
+   "id": "e955f754",
    "metadata": {},
    "outputs": [],
    "source": []
