--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -139,11 +139,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "66c2fc02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "events = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../events/barco_events_all.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "events['date'] = pd.to_datetime(events['date'])\n",
+    "events.set_index('date', inplace=True)\n",
+    "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
+    "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
+    "events_by_day.set_index('date', inplace=True)\n",
+    "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "134c4b65",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(chiffredaffaire_year['total'])\n",
+    "chiffredaffaire_year['évènement'] = chiffredaffaire_year.index.strftime('%Y-%m-%d').map(d2e).fillna('')\n",
+    "chiffredaffaire_year['jour'] = chiffredaffaire_year.index.strftime('%A')\n",
+    "\n",
+    "fig = px.bar(chiffredaffaire_year, y=['total'], hover_data=['évènement', 'jour'])\n",
     "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois')"
@@ -162,18 +181,18 @@
     "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
     "chiffredaffaire_top_year = chiffredaffaire_top_year[['total']].head(50)\n",
     "\n",
-    "chiffredaffaire_top_year['mois_courant'] = chiffredaffaire_top_year.index >= datetime.now() + relativedelta(months=-1)\n",
+    "chiffredaffaire_top_year['mois_courant'] = chiffredaffaire_top_year.index >= max(chiffredaffaire_top_year.index) + relativedelta(months=-1)\n",
     "chiffredaffaire_top_year = chiffredaffaire_top_year.reset_index().set_index(['date', 'mois_courant'])\n",
     "chiffredaffaire_top_year = chiffredaffaire_top_year.unstack('mois_courant')\n",
     "chiffredaffaire_top_year.columns = chiffredaffaire_top_year.columns.droplevel(0)\n",
     "chiffredaffaire_top_year['total'] = chiffredaffaire_top_year[True].fillna(0) + chiffredaffaire_top_year[False].fillna(0)\n",
     "chiffredaffaire_top_year = chiffredaffaire_top_year.sort_values(by='total', ascending=False)\n",
+    "chiffredaffaire_top_year['évènement'] = chiffredaffaire_top_year.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
+    "chiffredaffaire_top_year['jour'] = chiffredaffaire_top_year.index.strftime('%A')\n",
     "chiffredaffaire_top_year.index = chiffredaffaire_top_year.index.strftime('%d/%m/%Y')\n",
     "del chiffredaffaire_top_year['total']\n",
     "\n",
-    "chiffredaffaire_top_year\n",
-    "\n",
-    "fig = px.bar(chiffredaffaire_top_year)\n",
+    "fig = px.bar(chiffredaffaire_top_year, y=[False,True], hover_data=['évènement', 'jour'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
     "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
