Gestion de dates liées aux inscriptions des baristas (en avance ou du passé)

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -22,7 +22,7 @@
     "services_baristas_annule['Mois'] = pd.to_datetime(services_baristas_annule['date'].apply(lambda x: x[0:7]+'-01'))\n",
     "services_baristas_annule['Date'] = pd.to_datetime(services_baristas_annule['date'])\n",
     "del services_baristas_annule['date']\n",
-    "\n",
+    "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] < str(datetime.now())]\n",
     "services_baristas_annule['nom'] = services_baristas_annule['nom'].str.title()\n",
     "t2n = services_baristas_annule.groupby('telephone')['nom'].first().to_dict()\n",
     "n2t = services_baristas_annule.groupby('nom')['telephone'].first().to_dict()\n",
@@ -217,8 +217,8 @@
    "source": [
     "limit_date_year = datetime.now() + relativedelta(years=-1)\n",
     "services_baristas_year = services_baristas[services_baristas['Mois'] > limit_date_year]\n",
-    "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (datetime.now() + relativedelta(years=-1)).isoformat()\n",
-    "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (datetime.now() + relativedelta(years=-1)).isoformat()\n",
+    "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
+    "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
     "baristas_year = services_baristas_year.groupby(['nom', 'barista_hash', 'is_not_premier_service_12_mois'])[['role']].count().rename(columns={'role': 'nb'})\n",
     "baristas_year.sort_values(by=['nb', 'is_not_premier_service_12_mois', 'nom'], ascending=False, inplace=True)\n",
     "baristas_year.rename(columns={'nb': 'Nb de services'}, inplace=True)\n",
