Nouveaux indicateurs (sur permier serviecs)

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -264,7 +264,9 @@
     "    'plus_de_40_services': len(baristas_year[baristas_year['Nb de services'] > 40]),\n",
     "    'plus_de_60_services': len(baristas_year[baristas_year['Nb de services'] > 60]),\n",
     "    'nb_baristas': len(baristas_year),\n",
-    "    'moyenne_du_nb_de_services': baristas_year['Nb de services'].mean()\n",
+    "    'moyenne_du_nb_de_services': baristas_year['Nb de services'].mean(),\n",
+    "    'nb_plus_de_12_mois': len(baristas_year['Est là depuis plus d\\'un an'].dropna()),\n",
+    "    'nb_moins_de_12_mois': len(baristas_year['A fait son premier service dans les 12 mois'].dropna())\n",
     "}\n",
     "baristas_std = baristas_year.reset_index()\n",
     "res['ecart_type_du_nb_de_services'] = baristas_std[baristas_std.index == int(len(baristas_std)/2)].reset_index()['Nb de services'][0]\n",
