--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -76,7 +76,8 @@
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['Prix']].sum().reset_index()\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['produit'].apply(lambda x: re.sub(r'  *', ' ', x)[:25].title())\n",
-    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index().set_index(['date', 'produit'])[['Prix']]\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.reset_index()\n",
+    "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'produit'])[['Prix']].sum()\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.unstack('produit')\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.resample('MS').sum()\n",
     "chiffredaffaire_12_mois.columns = chiffredaffaire_12_mois.columns.droplevel(0)\n",
