Fonctionne aussi en janvier

--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta \n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
@@ -35,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(month=datetime.now().month - 6)\n",
+    "limit_date = datetime.now() + relativedelta(months=-1)\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:50])\n",
     "events_par_semaine = events_par_semaine.resample('W')[['url', 'titre']].aggregate({'url': 'count', 'titre': \" | \".join}).rename(columns={'url': 'Nb évènements'})\n",
