--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import os\n",
     "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta \n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
@@ -47,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(month=datetime.now().month - 1)\n",
+    "limit_date = datetime.now() + relativedelta(months=-1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_last_month['évènement'] = adhésions_last_month.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
