Renfort traité comme un service normal suite aux discussions de la soirée référents

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -88,7 +88,7 @@
     "import hashlib\n",
     "\n",
     "services_baristas = services_baristas_annule[services_baristas_annule['role'] != \"CRENEAU ANNULE\"]\n",
-    "services_baristas = services_baristas_annule[services_baristas_annule['role'] != \"RENFORT\"]\n",
+    "#services_baristas = services_baristas_annule[services_baristas_annule['role'] != \"RENFORT\"]\n",
     "\n",
     "premier_service = services_baristas.groupby('barista_hash')[['Date']].min()['Date'].to_dict()\n",
     "services_baristas['Date premier service'] = services_baristas['barista_hash'].map(premier_service)\n",
